# typist

./: .clang-format  CMakeLists.txt
include/: config.hpp  game.hpp  particles.hpp  random.hpp  star.hpp  ui.hpp  vec2.hpp  word.hpp
include/ui/: selection.hpp  text.hpp  textinput.hpp  ui.hpp
resources/: wordlist.txt
src/: game.cpp  main.cpp  particles.cpp  random.cpp  selection.cpp  text.cpp  textinput.cpp  ui.cpp
